CSS update - hover classes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- 
     Author: Cassie Lewis
     https://clewisdev.com
-    Date: 
+    Date: January - February 2023 
  -->
 
     <body>
@@ -28,7 +28,7 @@
 
         <div class="info-container">
 
-            <button class="accordion" id="accordion" onclick="showRules()">Settlers of Catan scorekeeper</button>
+            <button class="accordion" id="accordion">Settlers of Catan scorekeeper</button>
               <div class="panel" id="panel">  
                 <ul class="panel-text">
                     <!-- <li class="list-title">Settlers of Catan</li> -->
