HTML and README update
Changed button to "new game"

Updated a few typos in README

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <footer>
 
-        <button class="reset" id="reset-btn">reset</button>
+        <button class="reset" id="reset-btn">New Game</button>
 
     </footer>  
 
